@@ -1,0 +1,15 @@
+package org.ucdetector.example.classes;
+/**
+ * Wrong marker for classes with main methods - ID: 2808853
+ * <p>
+ * Classes which have a main method and 0 references should have no marker
+ * 'Unused class'
+ * <p>
+ * @see "http://sourceforge.net/tracker/?func=detail&aid=2808853&group_id=219599&atid=1046865"
+ * 
+ */
+public class MainMethodOnlyExample {
+  public static void main(String[] args) {
+
+  }
+}
