@@ -4,10 +4,8 @@ package org.ucdetector.example.classes;
  * UnusedClassUsedByItself
  */
 public class UnusedClassUsedByItselfExample {// Marker YES: unused code
-    public static void main(String[] args) {
-        System.out.println("Name=" + UnusedClassUsedByItselfExample.class.getName());
-    }
-
-    public UnusedClassUsedByItselfExample() {
-    }
+	public UnusedClassUsedByItselfExample() {
+		System.out.println("Name="
+				+ UnusedClassUsedByItselfExample.class.getName());
+	}
 }
